# rust-matter-led

./: .gitignore  24vled-esp32c6.kicad_pcb  24vled-esp32c6.kicad_pro  Cargo.toml  fp-info-cache  mise.toml
firmware/: Cargo.toml
hardware/: 24vled-esp32c6.kicad_pcb  24vled-esp32c6.kicad_prl  24vled-esp32c6.kicad_pro  24vled-esp32c6.kicad_sch  Symbols.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table  ~24vled-esp32c6.kicad_pcb.lck
hardware/Library.pretty/: Untitled.kicad_mod  Waveshare ESP32c6.kicad_mod  industries.kicad_mod  industries_10mm.kicad_mod  industries_5mm.kicad_mod
hardware/internal/Internal.pretty/: Waveshare ESP32c6.kicad_mod
hardware/parts/: led-driver.pcb3d
hardware/parts/2604_1106 (1)/CadenasModel/: 2604-1106.stp  readme-and-terms-of-use-3d-cad-models.txt
hardware/parts/2604_1106 (1)/KiCADv6/footprints.pretty/: CONN6_2604-1106_WAG.kicad_mod
parts/KiCADv6/: 2025-10-24_11-49-52.kicad_sym
